<resources>
    <string name="app_name">Ringer</string>
    <string name="ringer_user_name">XXX-XXX-XXX</string>
    <string name="ringer_password">XXX-XXX-XXX</string>
    <string name="ringerinteractive"><b>Ringer</b>Interactive</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="accept_the_terms_and_conditions">Accept the terms and conditions.</string>
    <string name="_continue">Continue</string>
    <string name="thank_you">Thank You!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="terms">Why do we use it?
    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    "On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."
    "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?"</string>
    <string name="title_activity_thank_you">ThankYou</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="privacy_policy_terms_of_service">Terms of Service</string>
    <string name="copyright_2022_flash_app_llc">Copyright 2022 Flash App LLC</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="access_to_contacts">Access to Contacts</string>
    <string name="ringer_interactive">Ringer Interactive</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="terms_url">https://ringerinteractive.com/terms-and-conditions/</string>
    <string name="privacy_url">https://ringerinteractive.com/privacy-policy/</string>
    <string name="ack_url">https://ringerinteractive.com/eula/</string>

    <string name="by_using_the_ringer_app_you_agree_to_the_the_following_privacy_policy_and_terms_of_service">By using the Ringer app, you agree to the the following</string>
    <string name="ringer_interactive_allows_you_to_receive_personalized_caller_ids_with_images_and_calls_to_action_when_companies_you_do_business_with_call_you_get_a_personalized_display_screen_to_know_who_and_why_they_are_calling_so_you_don_t_miss_important_calls">Ringer Interactive allows you to receive personalized Caller IDs with images and calls to action when companies you do business with call you.Get a personalized display screen to know who and why they are calling so you don\'t miss important calls.</string>
    <string name="privacy_policy3"><u>Privacy Policy</u></string>

</resources>