<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TermsAndConditionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/bg_color"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/terms"
                android:textStyle="normal" />


            <CheckBox
                android:id="@+id/cb_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/accept_the_terms_and_conditions"
                android:textColor="@color/bg_color"
                android:textSize="14sp"
                android:textStyle="normal" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_color"
                android:text="@string/_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:textStyle="normal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>