<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".AppearOnTopActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/img_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_appear" />


            <TextView
                android:id="@+id/txt_notification_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/nexalight"
                android:gravity="center"
                android:text="Ringer needs to appear on top of other apps in order to provide full functionality. \n\n Note: Ringer will not function properly if it is not set as the default dialer."
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/txt_notification_text"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nexabold"
                android:text="Appear On Top"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_appear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/txt_notification_text"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/_background_blue_round_corner"
                android:fontFamily="@font/nexabold"
                android:text="Allow to Appear On Top"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/txt_privacy"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/copyright_2022_flash_app_llc"
                android:textAllCaps="false"
                android:fontFamily="@font/nexalight"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/lin_bottom"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/nexalight"
                android:gravity="center"
                android:text="@string/by_using_the_ringer_app_you_agree_to_the_the_following_privacy_policy_and_terms_of_service"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/lin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_privacy1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/nexalight"
                    android:textColor="@color/light_blue"
                    android:text="Privacy Policy"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexalight"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text=" and "/>

                <TextView
                    android:id="@+id/txt_terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/nexalight"
                    android:text="Terms of Service"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nexalight"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/privacy_policy_terms_of_service"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>