<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".EditScreenActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/img_logo" />


            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ringer_interactive"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_below="@id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_notification"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Notifications"
                        android:textAllCaps="false"
                        android:layout_marginEnd="25dp"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_noti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:layout_marginStart="30dp"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:theme="@style/SCBSwitch"
                        app:thumbTint="@color/white" />

                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_contact"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contacts Access"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textStyle="bold"/>


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_contact"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    app:thumbTint="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:theme="@style/SCBSwitch"/>

            </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_allow_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/txt_copy"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/_background_blue_round_corner"
                android:text="Edit Settings"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/txt_privacy"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/copyright_2022_flash_app_llc"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="@string/privacy_policy_terms_of_service"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>